# ai-academy

./: .env  .gitignore  .gitmodules  Analisi rischio riconoscimento SMS.txt  CUsersHT311HHPCZscalerRootCertifica.txt  Compiti AI Academy.docx  G1E4_daniel_craciun.py  G2E1_risultati_churn.csv  G2E1_risultati_churn_sampling.csv  G2E2_clienti_churn_molti_dati.csv  G2E2_risultati_churn_random_forest.csv  G2E2_risultati_churn_xgb_validation.csv  G2E3_risultati_churn_xgboost.csv  G2E3_risultati_churn_xgboost_tuning.csv  HALLUCINATION GPT CHATBOT.txt  METRICHE NER + GPT.txt  NER+graph.py  README.md  agente_censura.py  app.py  azure_key.txt  conversazione.py  cypher.py  link_progetto_huggingface.txt  message.ipynb  neo4j.py  requirements.txt  riconoscimento_sms_finetuning.py  riconoscimento_sms_finetuning_metriche.py  riconoscimento_spam.py  riconoscimento_spam_LIME.py  saluta.py  sms_classifier.joblib  sms_vectorizer.joblib  spam_finetuning.csv  spam_sentiment_analysis_transformed.csv  studio_dataset.py  try copy.py  try.py  valutazione rischi.txt  (+1 more)
Giorno 10/: .env.example  README.md
Giorno_1/: G1E4.py  G1E4_Nicola_Stara.py  G1E4_commenti.py  G1E4_salvatore_patisso.py  README.md  esercizio_federico_guzzo.py  saluta.py
Giorno_10/: CHANGELOG.md  README.md  requirements.txt
Giorno_11/: .env  Dockerfile  README.md  app.py  esercizio_g11_joe.py  requirements.txt  saluta.py
Giorno_12/: SMS_Sentiment_Analysis_Transfer_Learning.py  ai_act_compliance.md  (+6 more)
Giorno_7/agente_ai/: README.md  pyproject.toml
Giorno_7/agente_ai/src/agente_ai/: crew.py  main.py
Giorno_7/crew_agent_proj/: README.md  pyproject.toml
Giorno_7/crew_agent_proj/src/crew_agent_proj/: crew.py  main.py
Giorno_7/crew_ai_project/ner_project/: README.md  pyproject.toml
Giorno_7/crew_ai_project/ner_project/src/ner_project/: crew.py  llm_provider.py  main.py
(+767 files in other folders)
