[project]
name = "agente_ai"
version = "0.1.0"
description = "Agente_ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
agente_ai = "agente_ai.main:run"
run_crew = "agente_ai.main:run"
train = "agente_ai.main:train"
replay = "agente_ai.main:replay"
test = "agente_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
