[project]
name = "crew_agent_proj"
version = "0.1.0"
description = "crew_agent_proj using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
crew_agent_proj = "crew_agent_proj.main:run"
run_crew = "crew_agent_proj.main:run"
train = "crew_agent_proj.main:train"
replay = "crew_agent_proj.main:replay"
test = "crew_agent_proj.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
