[project]
name = "ner_project"
version = "0.1.0"
description = "ner_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
ner_project = "ner_project.main:run"
run_crew = "ner_project.main:run"
train = "ner_project.main:train"
replay = "ner_project.main:replay"
test = "ner_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
